feat: update starter tags

--- a/docs/starters.yml
+++ b/docs/starters.yml
@@ -3,6 +3,7 @@
   description: Yet another Blog starter with a different style
   tags:
     - Blog
+    - Markdown
   features:
     - Extendable
     - Feature filters
