--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-source-wordpress": "^3.1.58",
     "gatsby-transformer-remark": "^2.1.7",
     "gatsby-transformer-sharp": "^2.1.3",
+    "html-react-parser": "^0.10.1",
     "lodash": "^4.17.4",
     "moment": "^2.24.0",
     "node-sass": "^4.9.3",
